acvus-mir-test/tests/snapshots/e2e__script_if_expr.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     1 │   jump_if true (r0) then L0 else L2
     2 │ L0:
     4 │   jump L1(1 (r1))
     5 │ L2:
     7 │   jump L1(2 (r2))
     8 │ L1(r3: Int):
     9 │   r4 = ref x
    10 │   store r4 = r3
    11 │   r5 = ref x
    12 │   r6 = load r5
    13 │   return r6

    ; r0 (v1) : Bool
    ; r1 (v2) : Int
    ; r2 (v3) : Int
    ; r3 (v4) : Int
    ; r4 (v6) : Ref<Int>
    ; r5 (v7) : Ref<Int>
    ; r6 (x) : Int
