acvus-mir-test/tests/snapshots/e2e__script_if_no_else.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     1 │   r0 = ref x
     2 │   store r0 = 0 (r1)
     4 │   jump_if true (r2) then L0 else L1
     5 │ L0:
     7 │   r3 = ref x
     8 │   store r3 = 1 (r4)
     9 │   jump L1
    10 │ L1:
    11 │   r5 = tuple ()
    12 │   r6 = ref x
    13 │   r7 = load r6
    14 │   return r7

    ; r0 (v3) : Ref<Int>
    ; r1 (v1) : Int
    ; r2 (v4) : Bool
    ; r3 (v6) : Ref<Int>
    ; r4 (v5) : Int
    ; r5 (v7) : Unit
    ; r6 (v8) : Ref<Int>
    ; r7 (x) : Int
