acvus-mir-test/tests/snapshots/e2e__script_let_bind.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     1 │   r0 = ref x
     2 │   store r0 = 1 (r1)
     3 │   r2 = ref x
     4 │   r3 = load r2
     5 │   return r3

    ; r0 (v3) : Ref<Int>
    ; r1 (v1) : Int
    ; r2 (v4) : Ref<Int>
    ; r3 (x) : Int
