acvus-mir-test/tests/snapshots/e2e__script_let_shadowing.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     1 │   r0 = ref x
     2 │   store r0 = 1 (r1)
     3 │   r2 = ref x
     4 │   r3 = load r2
     6 │   r4 = r3 + 1 (r5)
     7 │   r6 = ref x
     8 │   store r6 = r4
     9 │   r7 = ref x
    10 │   r8 = load r7
    11 │   return r8

    ; r0 (v3) : Ref<Int>
    ; r1 (v1) : Int
    ; r2 (v4) : Ref<Int>
    ; r3 (x) : Int
    ; r4 (v7) : Int
    ; r5 (v6) : Int
    ; r6 (v8) : Ref<Int>
    ; r7 (v9) : Ref<Int>
    ; r8 (x) : Int
