acvus-mir-test/tests/snapshots/e2e__script_while_let.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     1 │   r0 = variant Some(1 (r1))
     2 │   r2 = ref x
     3 │   store r2 = r0
     5 │   r3 = ref result
     6 │   store r3 = 0 (r4)
     7 │   jump L0
     8 │ L0:
     9 │   r5 = ref x
    10 │   r6 = load r5
    11 │   r7 = test r6 is Some
    12 │   jump_if r7 then L3 else L4
    13 │ L3:
    14 │   r8 = unwrap r6
    16 │   jump L5(true (r9))
    17 │ L4:
    19 │   jump L5(false (r10))
    20 │ L5(r11: Bool):
    21 │   jump_if r11 then L1 else L2
    22 │ L1:
    23 │   r12 = unwrap r6
    24 │   r13 = ref v
    25 │   store r13 = r12
    26 │   r14 = ref v
    27 │   r15 = load r14
    28 │   r16 = ref result
    29 │   store r16 = r15
    30 │   r17 = variant None
    31 │   r18 = ref x
    32 │   store r18 = r17
    33 │   jump L0
    34 │ L2:
    35 │   r19 = ref result
    36 │   r20 = load r19
    37 │   return r20

    ; r0 (v2) : Option<Int>
    ; r1 (v1) : Int
    ; r2 (v4) : Ref<Option<Int>>
    ; r3 (v7) : Ref<Int>
    ; r4 (v5) : Int
    ; r5 (v8) : Ref<Option<Int>>
    ; r6 (x) : Option<Int>
    ; r7 (v10) : Bool
    ; r8 (v11) : Int
    ; r9 (v12) : Bool
    ; r10 (v14) : Bool
    ; r11 (v13) : Bool
    ; r12 (v) : Int
    ; r13 (v17) : Ref<Int>
    ; r14 (v18) : Ref<Int>
    ; r15 (v) : Int
    ; r16 (v20) : Ref<Int>
    ; r17 (v21) : Option<Int>
    ; r18 (v22) : Ref<Option<Int>>
    ; r19 (v23) : Ref<Int>
    ; r20 (result) : Int
