acvus-mir-test/tests/snapshots/e2e__simple_match_binding.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @name
     1 │   r1 = context_load r0
     4 │   r2 = T0 + T0
     5 │   r3 = r2 + r1
     6 │   return r3

    ; r0 (@name) : <error>
    ; r1 (v1) : String
    ; r2 (v6) : String
    ; r3 (v8) : String
    ; r4 (x) : String
    ; r5 (@name) : String
    ; r6 (v2) : String
    ; r7 (v9) : String
    ; r8 (v5) : String
    ; r9 (v4) : String
